# mkalias

./: .editorconfig  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: cfurl.rs  main.rs
