[package]
name = "mkalias"
version = "0.2.0"
edition = "2021"
rust-version = "1.64"

repository = "https://github.com/reckenrode/mkalias"
categories = ["command-line-utilities"]
keywords = ["alias", "darwin", "macos", "osx"]
license = "GPL-3.0-only"
readme = "README.md"

authors = ["Randy Eckenrode <randy@largeandhighquality.com>"]
description = "A simple command-line tool to create Finder aliases"

[dependencies]
anyhow = "1.0"
core-foundation = "0.9"
clap = { version = "4.0", features = ["derive"] }
